kubernetes/cats-api-deployment copy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
      app: cats-api           
  name: cats-api                                                  # name of deployment
spec:
  replicas: 2                                                     # 2 pods managed by ReplicaController/DeploymentController
  selector:                                                       # defines how the Deployment finds which Pods to manage
    matchLabels:
      app: cats-api                                               # spec.selector.matchlabels.app == metadata.labels.app  
  template:
    metadata:
      labels:
        app: cats-api
    spec:
      containers:
        # needed to be pushed everytime the image is changed
      - image: boseabhishek/cats-api
        imagePullPolicy: IfNotPresent
        name: cats-api
