kubernetes/cats-api-service.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: cats-api
    name: cats-api-svc
spec:
    ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
        app: cats-api
    type: ClusterIP
