kubernetes/ingress-for-cats-api-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: frontend-ingress
spec:
    rules:
    - http:
        paths:
        - path: /api
          backend:
            serviceName: cats-api-svc
            servicePort: 8080
